# archetype-py

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  architecture.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: archetype.yml  ci.yml  publish.yml
archetype/: __init__.py  check.py  config.py  init.py  reporter.py  rule.py
archetype/analysis/: __init__.py  ast_utils.py  cache.py  git_utils.py  imports.py  init.py  models.py  pattern.py
archetype/dsl/: __init__.py  init.py  query.py
archetype/plugin/: __init__.py  init.py  pytest_plugin.py
archetype/rules/: __init__.py  boundaries.py  cycles.py  layers.py  naming.py
benchmarks/: README.md  fixtures.py  run_benchmarks.py  test_performance_regression.py
docs/: recipes.md
examples/django/: README.md
examples/django/billing/: internal.py  views.py
examples/django/users/: internal.py  services.py  views.py
examples/fastapi/: README.md  architecture.py
examples/fastapi/app/api/: users.py
examples/fastapi/app/db/: session.py
examples/fastapi/app/db/internal/: engine.py
examples/fastapi/app/repositories/: users.py
examples/fastapi/app/services/: users.py
tests/: test_cli.py  test_decorator_since.py  test_dsl.py  test_graph.py  test_grouping.py  test_init.py  test_pattern.py  test_plugin.py  test_public_api.py  test_reporter.py  test_rule.py  test_rules_boundaries.py  test_rules_cycles.py  test_rules_layers.py  test_rules_naming.py
tests/fixtures/namespace_project/company/payments/: api.py
tests/fixtures/namespace_project/company/shared/: utils.py
tests/fixtures/simple_project/: .gitignore
tests/fixtures/simple_project/simple_project/: api.py  db.py  main.py  services.py
tests/fixtures/simple_project/simple_project/internal/: init.py  tokens.py
(+2 files in other folders)
